--- a/sass/_sqz-variables.scss
+++ b/sass/_sqz-variables.scss
@@ -18,7 +18,7 @@ $lightColor: tint($darkColor,90%);
 $darGrayColor: #afb2b2; // CP Gray
 $grayColor: #ddd;
 $headingColor: $primaryColor;
-$navColor : $plainColor;
+$navColor : $darkColor;
 $navHoverColor : $secondaryColor;
 $navCurrentColor : $secondaryColor;
 $footerColor: $plainColor;
