--- a/sass/_sqz-header.scss
+++ b/sass/_sqz-header.scss
@@ -1,5 +1,5 @@
 //header 
-#sqz-header {
+.sqz-header {
     width: 100%;
     @include sqz-header_height; 
     z-index: 999;
@@ -7,10 +7,12 @@
     left: 50%; 
     top: 0;
     width: 100%;
-    padding: 34px 0;
-    background: rgba($darkColor, 0.8);
+    padding: 0;
+    background: $plainColor;
     .sqz-sticky & {
-        background: $darkColor;
+        background: rgba($plainColor, 0.8);
+        box-shadow: 0 0 5px rgba($darkColor, 0.2);
+        height: 60px;
     }
     transform: translateX(-50%);
     @include sqz-transition(0.5s);
@@ -22,7 +24,9 @@
         // }
 
     }
-    
+    .container, .container-fluid, .row {
+        height: 100%;
+    }
     .admin-bar.sqz-sticky & {
         @include smallphone {
             top: 0;   
@@ -33,11 +37,11 @@
         height: 90px;
     }
     z-index: 99;
-    #sqz-logo {
+    .sqz-logo {
         @include sqz-transition(0.5s);
-        width: 378px;
-        @media (min-width:1320px) {
-            margin: 0 0 0 -59px;
+        width: 300px;
+        .sqz-sticky & {
+            width: 200px;
         }
         overflow: hidden;
         * {
@@ -67,21 +71,7 @@
             margin: 0;
             line-height: 0;
         }
-        .sqz-site_title {
-            margin-top: 8px;
-            @include sqz-regular;
-            letter-spacing: 1px;
-            color: $primaryColor;
-            font-size: 14px;
-            line-height: 14px;
-            @include sqz-transition(0.5s);
-            span {
-                color: $secondaryColor;
-            }
-            @include tablet {
-                font-size: 11px;
-            }
-        }
+
         a {
             img {
                 width: 100%;
@@ -91,63 +81,8 @@
 
             }
         }
-        .sqz-svg {
-            width: 100%;
-            max-width: 100%;
-            .ie & {
-                height: 100px;
-            }
-        }
 
     }
-    .sqz-header_social{
-        text-align: right;
-        width: 100%;
-        float: right;
-        .sqz-social{
-            margin-top: 0;
-            float: right;
-            li{
-                float: none;
-                margin-right: 0;
-                margin-left: 5px;
-            }
-        }
-        @include tablet {
-            display: none;
-        }
-    }
-    + div{
-     //   padding-top: $headerHeight;
-        @include tablet {
-       //     padding-top: 90px;
-        }
-    }
-    + div#sqz-banner{
-  //      padding-top: 0;
-    }
+
 }
 
-
-.sqz-tel {
-    float: right;
-    margin-top: 11px;
-    @include sqz-bold;
-    font-size: 16px;
-    text-transform: uppercase;
-    @include sqz-transition(0.5s);
-    line-height: 20px;
-    a {
-        color: $secondaryColor;
-        position: relative;
-        top: -4px;
-        @include desktop {
-            font-size: 13px;
-            top: -5px; 
-        }
-    }
-
-    @include tablet {
-        display: none;
-    }
-}
